added dialog, trying to correctly display position on MapFragment from MapListFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_activity_maps">Map</string>
     
     <string name="placeholder_list_item_map_title">Stockholm</string>
+    <string name="dialog_reminder_text">Enter reminder</string>
+    <string name="dialog_reminder_save">Save</string>
 </resources>
