--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">GeoReminder</string>
+    <string name="notification_channel_name">Fetch location periodically</string>
     <string name="title_activity_maps">Map</string>
     
     <string name="placeholder_list_item_map_title">Stockholm</string>
